add script.js, connect to index.html

--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
     <head>
         <link rel="stylesheet" href="style.css" />
         <title>My Personal Website</title>
-      </head>
-  <body>
-    <h1>Ryan See</h1>
-  </body>
+    </head>
+    <body>
+        <h1>Ryan See</h1>
+        <script src="script.js"></script>
+    </body>
 </html>
+
